; ModuleID = '/home/carl/AnghaBench/linux/drivers/mmc/host/extr_atmel-mci.c_atmci_pdc_set_both_buf.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/mmc/host/extr_atmel-mci.c_atmci_pdc_set_both_buf.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.atmel_mci = type { i64 }

@PDC_FIRST_BUF = common dso_local global i32 0, align 4
@PDC_SECOND_BUF = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.atmel_mci*, i32)* @atmci_pdc_set_both_buf to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @atmci_pdc_set_both_buf(%struct.atmel_mci* %0, i32 %1) #0 {
  %3 = alloca %struct.atmel_mci*, align 8
  %4 = alloca i32, align 4
  store %struct.atmel_mci* %0, %struct.atmel_mci** %3, align 8
  store i32 %1, i32* %4, align 4
  %5 = load %struct.atmel_mci*, %struct.atmel_mci** %3, align 8
  %6 = load i32, i32* %4, align 4
  %7 = load i32, i32* @PDC_FIRST_BUF, align 4
  %8 = call i32 @atmci_pdc_set_single_buf(%struct.atmel_mci* %5, i32 %6, i32 %7)
  %9 = load %struct.atmel_mci*, %struct.atmel_mci** %3, align 8
  %10 = getelementptr inbounds %struct.atmel_mci, %struct.atmel_mci* %9, i32 0, i32 0
  %11 = load i64, i64* %10, align 8
  %12 = icmp ne i64 %11, 0
  br i1 %12, label %13, label %18

13:                                               ; preds = %2
  %14 = load %struct.atmel_mci*, %struct.atmel_mci** %3, align 8
  %15 = load i32, i32* %4, align 4
  %16 = load i32, i32* @PDC_SECOND_BUF, align 4
  %17 = call i32 @atmci_pdc_set_single_buf(%struct.atmel_mci* %14, i32 %15, i32 %16)
  br label %18

18:                                               ; preds = %13, %2
  ret void
}

declare dso_local i32 @atmci_pdc_set_single_buf(%struct.atmel_mci*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
